Telas com funcionlidades implementadas
Falta acabar a cidade de se implementar,o estado ja esta completo

--- a/src/main/webapp/pages/Cidades.xhtml
+++ b/src/main/webapp/pages/Cidades.xhtml
@@ -9,18 +9,28 @@
 	<title>Cidades</title>
 </h:head>
 <h:body>
+	<p:growl id="mensagem" />
 	<h:form>
 		<p:panel header="Cidades - Listagem">
 			<p:dataTable emptyMessage="Nenhum Registro Encontrado."
-				paginator="true">
+				paginator="true" value="#{cidadeBean.cidades}" var="cidade" rows="5">
 				<f:facet name="header">
-					<p:commandButton value="Novo" oncomplete="PF('dialogo').show()" />
+					<p:commandButton value="Novo" oncomplete="PF('dialogo').show()"
+						actionListener="#{cidadeBean.novo}"
+						update=":mensagem :formCadastro:painel" 
+						icon="ui-icon-circle-plus"/>
 				</f:facet>
 
-				<p:column headerText="Nome">
+				<p:column headerText="Nome" sortBy="#{cidade.nome}"
+					filterBy="#{cidade.nome}">
+					<h:outputText value="#{cidade.nome}" />
 				</p:column>
 
-				<p:column headerText="Estado">
+				<p:column headerText="Estado" sortBy="#{cidade.estado.nome}"
+					filterBy="#{cidade.estado.nome}">
+					<h:outputText value="#{cidade.estado.nome}" />
+					<h:outputText value=" - " />
+					<h:outputText value="#{cidade.estado.sigla}" />
 				</p:column>
 
 				<p:column headerText="Opcoes">
@@ -32,13 +42,17 @@
 
 	<p:dialog header="Cidades - Cadastro" widgetVar="dialogo"
 		draggable="false" resizable="false" modal="true" closable="false">
-		<h:form>
-			<h:panelGrid columns="2">
+		<h:form id="formCadastro">
+			<h:panelGrid id="painel" columns="2">
 				<p:outputLabel value="Nome:" />
-				<p:inputText maxlength="50" size="30" />
+				<p:inputText maxlength="50" size="30"
+					value="#{cidadeBean.cidade.nome}" />
+
 				<p:outputLabel value="Estado:" />
-				<p:selectOneMenu filter="true">
-					<f:selectItem itemValue="" itemLabel="Seleciona Um Estado"/>
+				<p:selectOneMenu filter="true" value="#{cidadeBean.cidade.estado}">
+					<f:selectItem noSelectionOption="true" itemLabel="Selecione um Estado" />
+					<f:selectItems value="#{cidadeBean.estados}" var="estado"
+						itemValue="#{estado}" itemLabel="#{estado.nome}" />
 				</p:selectOneMenu>
 			</h:panelGrid>
 			<h:panelGrid columns="2">
